@@ -8,6 +8,7 @@ ADD_EXECUTABLE(coalescingtest coalescingtest.cpp)
 ADD_EXECUTABLE(nbody nbody.cpp nbody_kernel.cpp nbody_worker.cpp)
 ADD_EXECUTABLE(dbl_nbody dbl_nbody.cpp dbl_nbody_kernel.cpp dbl_nbody_worker.cpp)
 ADD_EXECUTABLE(uavwrite uavwrite.cpp)
+ADD_EXECUTABLE(uavatomics uavatomics.cpp)
 
 TARGET_LINK_LIBRARIES(peekflops aticalrt aticalcl ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(matrixmult aticalrt aticalcl ${Boost_LIBRARIES})
@@ -17,3 +18,4 @@ TARGET_LINK_LIBRARIES(coalescingtest aticalrt aticalcl ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(nbody aticalrt aticalcl ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(dbl_nbody aticalrt aticalcl ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(uavwrite aticalrt aticalcl ${Boost_LIBRARIES})
+TARGET_LINK_LIBRARIES(uavatomics aticalrt aticalcl ${Boost_LIBRARIES})
